--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ django-crispy-forms==2.0
 django-currentuser==0.5.3
 django-filter==23.1
 django-phonenumber-field==7.0.2
+gevent==22.10.2
+greenlet==2.0.2
+gunicorn==20.1.0
 kombu==5.2.4
 phonenumberslite==8.13.10
 Pillow==9.5.0
@@ -21,3 +24,5 @@ six==1.16.0
 sqlparse==0.4.4
 vine==5.0.0
 wcwidth==0.2.6
+zope.event==4.6
+zope.interface==6.0
