--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 amqp==5.1.1
 asgiref==3.6.0
+async-timeout==4.0.2
 billiard==3.6.4.0
 celery==5.2.7
+certifi==2022.12.7
+charset-normalizer==3.1.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -15,13 +18,17 @@ django-phonenumber-field==7.0.2
 gevent==22.10.2
 greenlet==2.0.2
 gunicorn==20.1.0
+idna==3.4
 kombu==5.2.4
 phonenumberslite==8.13.10
 Pillow==9.5.0
 prompt-toolkit==3.0.38
 pytz==2023.3
+redis==4.5.4
+requests==2.29.0
 six==1.16.0
 sqlparse==0.4.4
+urllib3==1.26.15
 vine==5.0.0
 wcwidth==0.2.6
 zope.event==4.6
